fixed: Check business code - throw error if not successful.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.bunny.net">
   <link href="https://fonts.bunny.net/css?family=public-sans:400,500,600,700" rel="stylesheet" />
-  <title>Vue Dashboard Template</title>
-  <meta name="description" content="A professional dashboard template built with Nuxt UI, featuring multiple pages, data visualization, and comprehensive management capabilities for creating powerful admin interfaces.">
+  <title>Rune AI </title>
+  <meta name="description" content="Rune AI ">
 </head>
 
 <body>
